a scalar (vs list). Mainly useful with things like config dir's
where the first one will always be used in any case:

    use FindBin::libs qw( base=etc scalar );

exports "$etc" rather than "@etc" (saves using $etc[0]
everyplace). Also works with 

    use FindBin::libs qw( base=etc export=config scalar );

to export $config rather than an array.

Added some examples.

Finally remembered to fix typo (thanks to x.guimard).


1.11   Wed Jul  2 22:34:00 CDT 2014

R.I.P. Build.PL.
see Makefile.PL

Fix broken assignment of rel2abs from Cwd rather than 
File::Spec::Functions.

Add test for abs_path or rel2abs surviving both '//' and 'cwd' --
if neither of them is available or working the rest of this is
a waste.

Note: I don't have access to windows for testing. If any of this
fails please contact me and we can figure out what is wrong.


1.9.1   Tue May 27 08:20:41 CDT 2014

Minor cleanup blows up in 5.12; works in 5.14. Given that 5.20 is
about to be on the street: the current version is pushed 
up to 5.14 (i.e., if ref $^V and v5.14 le $^V then the 
installed version is *_curr, otherwise it is *_5_8).

1.9     Sat May 24 09:15:15 CDT 2014

Minor cleanup in handling abs_path replacement.
Seems to work for people with original issue so this one goes
on CPAN.


1.8.1   Sun Mar 23 14:29:44 CDT 2014

Assign local abs_path rather than shuffle the symbol table after using Cwd.
Avoids issues with munging symbol table in Cwd itself.

1.8 Tue May 28 21:04:30 CDT 2013

Update to work with v5.18

1.7 Thu Mar 14 15:23:30 GMT 2013

Up version to 1.7, avoids issues with mutliple dots.

1.65.2 Tue Feb 19 20:00:27 CST 2013

Fix tests for Windows (thanks to Alexandr Ciornii 
for patches).

1.65.1 Sat Dec 22 22:47:55 CST 2012

Pod Errors.

1.65

Skip unusable tests on windows; use abs_path for
path checks to avoid symlinks botching the tests.

Cleanups in libs_curr.pm to use 5.10 features.

Add "blib" option to prefer "blib" to "lib" at the 